
* New feature: The $(let ...) function
  This function allows user-defined functions to define a set of local
  variables: values can be assigned to these variables from within the
  user-defined function and they will not impact global variable assignments.
  Implementation provided by Jouke Witteveen <j.witteveen@gmail.com>

* If the MAKEFLAGS variable is modified in a makefile, it will be re-parsed
  immediately rather than after all makefiles have been read.  Note that
  although all options are parsed immediately, some special effects won't
  appear until after all makefiles are read.

* The -I option accepts an argument "-" (e.g., "-I-") which means "reset the
  list of search directories to empty".  Among other things this can be used
  to prevent GNU make from searching in its default list of directories.

* New debug option "print" will show the recipe to be run, even when silent
  mode is set, and new debug option "why" will show why a target is rebuilt
  (which prerequisites caused the target to be considered out of date).
  Implementation provided by David Boyce <David.S.Boyce@gmail.com>

* The existing --trace option is made equivalent to --debug=print,why

* Target-specific variables can now be marked "unexport".

* Exporting / unexporting target-specific variables is handled correctly, so
  that the attribute of the most specific variable setting is used.

* Special targets like .POSIX are detected upon definition, ensuring that any
  change in behavior takes effect immediately, before the next line is parsed.

* A long-standing issue with the directory cache has been resolved: changes
  made as a side-effect of some other target's recipe are now noticed as
  expected.

* GNU make has sometimes chosen unexpected, and sub-optimal, chains of
  implicit rules due to the definition of "ought to exist" in the implicit
  rule search algorithm, which considered any prerequisite mentioned in the